# NewMA

./: .env  .env.example  .gitignore  README.Docker.md  README.md  docker-compose.yml  pyproject.toml  setup-env.sh
agent_service/: .env.example  Dockerfile  README.md  graphs_visualization.ipynb  main.py  pyproject.toml
agent_service/src/agent/: explainers.py  planners.py  reporters.py
agent_service/src/agent/classifiers/: flow.py  subtasks.py
agent_service/src/agent/code/: debagger.py  generator.py
agent_service/src/agent/core/: config.py
agent_service/src/agent/dto/: dependencies.py  variables.py
agent_service/src/agent/enums/classifiers/: tasks.py
agent_service/src/agent/examples/classifiers/: tasks.py
agent_service/src/agent/examples/summarizers/: planners.py
agent_service/src/agent/memory/: conversation.py  planners.py
agent_service/src/agent/memory/code/: generator.py  variables.py
agent_service/src/agent/prompts/classifiers/: flow.py  tasks.py
agent_service/src/agent/prompts/code/: debagger.py  generator.py  stitcher.py
agent_service/src/agent/prompts/planners/: classification.py  eda.py
agent_service/src/agent/prompts/summarizers/: planners.py
agent_service/src/agent/registry/code/: debagger.py  (+1 more)
agent_service/src/agent/runners/: planners.py
agent_service/src/agent/summarizers/: planners.py
agent_service/src/agent/template/: planners.py
agent_service/src/agent_core/cache/: chat_history.py
agent_service/src/agent_core/core/: config.py
agent_service/src/agent_core/models/: anthropic_factory.py  registry.py
agent_service/src/agent_core/solution_planners/: builder.py  dto.py  memory.py
agent_service/src/agent_core/subtask_selectors/: builder.py
agent_service/src/agent_core/task_selector/: builder.py  enums.py  few_shot_examples.py  prompt.py
agent_service/src/agent_core/task_selectors/: builder.py  prompt.py
agent_service/src/agents/: state.py
agent_service/src/agents/graphs/: builder.py  orchestrator.py
agent_service/src/agents/models/: anthropic_.py
agent_service/src/agents/nodes/: agent_model_classification.py  base.py  conditional_routing.py  context_advising.py  direct_responding.py  fallback_handling.py  subtask_classification.py  summarization.py
agent_service/src/agents/prompts/: agent_mode_classification.py  code_debagging.py  context_advising.py  direct_responding.py  fallback_handling.py  subtask_classification.py  summarization.py
agent_service/src/api/v1/: router.py
agent_service/src/cache/: chat_history.py  memory.py
agent_service/src/core/: config.py  db.py  exceptions.py
agent_service/src/loaders/: base.py  local.py
agent_service/src/models/: __init__.py  base.py  chat_history.py  memory.py
agent_service/src/repositories/: chat_history.py  memory.py
agent_service/src/schemas/: agent.py  base.py  chat_history.py  memory.py
agent_service/src/services/: agent.py  chat_history.py  memory.py
agentic/: main.py  pyproject.toml
agentic/src/agent/models/: anthropic_.py
agentic/src/agent/nodes/: base.py  decision.py  planning.py
agentic/src/agent/prompts/: desicion.py  planning.py
agentic/src/models/: memory.py
agentic/src/repositories/: memory.py
agentic/src/services/: agent.py  memory.py
session_service/: .env.example  Dockerfile  main.py  pyproject.toml
session_service/src/api/v1/: router.py
session_service/src/core/: config.py  db.py  exceptions.py  security.py  session_cache.py
session_service/src/models/: base.py  session.py
session_service/src/repositories/: session.py
session_service/src/schemas/: session.py  token.py
session_service/src/services/: session.py
(+273 files in other folders)
