[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.116.1",
    "imbalanced-learn>=0.12.4",
    "imblearn>=0.0",
    "joblib>=1.5.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pip>=25.2",
    "plotly>=6.2.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]
