[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh",
    "catboost>=1.2.8",
    "category-encoders",
    "eli5",
    "fastapi>=0.116.1",
    "fastparquet",
    "feature-engine",
    "graphviz",
    "hyperopt",
    "imbalanced-learn>=0.12.4",
    "imblearn>=0.0",
    "joblib>=1.5.1",
    "keras",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "lightgbm>=4.6.0",
    "lime",
    "linearmodels",
    "matplotlib>=3.10.5",
    "missingno",
    "nltk",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pingouin",
    "pip>=25.2",
    "plotly",
    "psycopg2>=2.9.10",
    "pyarrow",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydotplus",
    "redis>=6.2.0",
    "requests",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "shap",
    "smote-variants",
    "spacy",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "tqdm",
    "tsfresh",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
    "yellowbrick",
]
